--- a/templates/base.html
+++ b/templates/base.html
@@ -83,8 +83,8 @@
                     <button class="btn btn-icon theme-toggle" id="themeToggle" title="Switch Theme">
                         <i class="fa-solid fa-moon" id="themeIcon"></i>
                     </button>
-
-                    <a href="admin_master" class="btn btn-glass-primary btn-sm px-4 rounded-pill">
+ 
+                    <a href="admin_master" class="btn btn-glass-"btn btn-glass-primary btn-sm w-100 rounded-pill">
                         Admin
                     </a>
                 </div>
@@ -140,6 +140,7 @@
     <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 </body>
 </html>
+
 
 
 
