--- a/templates/admin/evening_master.html
+++ b/templates/admin/evening_master.html
@@ -143,7 +143,7 @@
                 </div>
                 <div class="d-flex gap-2">
                     <a href="{{ url_for('generate_pdf', settle_id=s.id) }}" class="btn btn-sm btn-light flex-fill border"><i class="fa-solid fa-print"></i> PDF</a>
-                    <a href="{{ url_for('admin_edit_evening', settle_id=s.id) }}" class="btn btn-sm btn-primary flex-fill"><i class="fa-solid fa-pen"></i> Edit</a>
+                    <a href="{{ url_for('edit_evening', settle_id=s.id) }}" class="btn btn-sm btn-primary flex-fill"><i class="fa-solid fa-pen"></i> Edit</a>
                 </div>
             </div>
         </div>
